remove uses of features not available in java 11